Fix grid align cards

--- a/src/index.css
+++ b/src/index.css
@@ -108,10 +108,11 @@ body {
 }
 
 .gameBoard {
+    justify-content: center;
     display: grid;
     margin: 30px;
     gap: 10px;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 300px);
 }
 .card {
   display: grid;
